--- a/media/css/main.css
+++ b/media/css/main.css
@@ -68,7 +68,7 @@
 /* @Reset defaults *********/
 header, hgroup, nav, section, article, aside, footer { display: block; }
 html, body, form, fieldset, legend, h1, h2, h3, h4, h5, h6, dd { margin: 0; padding: 0; }
-p, pre, blockquote, ul, ol, dl, table, figure { margin: 0 0 1.5em; padding: 0; }
+p, pre, blockquote, ul, ol, dl, table, figure { margin: 0 0 1.4em; padding: 0; }
 blockquote:before, blockquote:after, q:before, q:after { content: ""; }
 blockquote, q { quotes: "" ""; }
 table { border-collapse: collapse; border-spacing: 0; }
@@ -88,6 +88,7 @@ html, body {
 body {
     background: #f5f5f5 url(/media/img/bg-grain.png) fixed;
     font: 16px/1.428 Vollkorn, Georgia, sans-serif;
+    color: #212a2f;
 }
 
 #page {
@@ -161,13 +162,11 @@ a.go:after {
 .button:link,
 .button:visited {
   display: inline-block;
-  -moz-border-radius: 0.25em;
   border-radius: 0.25em;
   -moz-box-shadow: 0 2px 0 0 rgba(0,0,0,.1), inset 0 -2px 0 0 rgba(0,0,0,.2);
   -webkit-box-shadow: 0 2px 0 0 rgba(0,0,0,.1), inset 0 -2px 0 0 rgba(0,0,0,.2);
   box-shadow: 0 2px 0 0 rgba(0,0,0,.1), inset 0 -2px 0 0 rgba(0,0,0,.2);
   background-color: #276195;
-  background-repeat: repeat-x;
   background-image: -moz-linear-gradient(#3c88cc, #276195);
   background-image: -ms-linear-gradient(#3c88cc, #276195);
   background-image: -webkit-linear-gradient(#3c88cc, #276195);
@@ -284,24 +283,40 @@ a.go:after {
 
 #page-nav li {
   display: inline;
-  margin-left: 20px;
+  margin-left: 12px;
 }
 
 #page-nav a:link,
 #page-nav a:visited {
   color: #dadada;
   text-decoration: none;
+  padding: 2px 6px;
+  border-radius: 3px;
+  -moz-transition: all .125s ease-out;
+  -ms-transition: all .125s ease-out;
+  -o-transition: all .125s ease-out;
+  -webkit-transition: all .125s ease-out;
+  transition: all .125s ease-out;
 }
 
 #page-nav a:hover,
 #page-nav a:focus,
 #page-nav a:active {
+  background: #434749;
+  background: rgba(150,150,150,.2);
   color: #fff;
   text-decoration: underline;
+  -moz-transition: all .125s ease-in;
+  -ms-transition: all .125s ease-in;
+  -o-transition: all .125s ease-in;
+  -webkit-transition: all .125s ease-in;
+  transition: all .125s ease-in;
 }
 
-#page-nav .blog:after {
-  content: " >";
+#page-nav .current a {
+  background: #53585a;
+  background: rgba(150,150,150,.35);
+  color: #fff;
 }
 
 #tabzilla {
@@ -419,6 +434,7 @@ a.go:after {
 #footer h4 {
   font: normal 14px "Open Sans", sans-serif;
   text-transform: uppercase;
+  text-shadow: none;
 }
 
 #footer .sponsors {
@@ -485,6 +501,15 @@ a.go:after {
   color: #b7bcc0;
 }
 
+.languages select {
+  border: 1px solid #333;
+  background: transparent;
+  color: #b7bcc0;
+}
+
+.js .languages button {
+  display: none;
+}
 
 
 /* Tablet Layout: 760px */
